Normalize whitespaces, fixes #3

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -37,5 +37,5 @@ main {
     padding-top: 1.25em;
 }
 .btn-group {    
-    margin-left: 15px;
+    margin-right: 15px;
 }
